# gtk-and-autotools

./: .gitignore  README.md  configure.ac
src/: Makefile.am  first.gresource.xml  first_app.c  first_app.h  first_window.c  first_window.h  main.c
src/ui/: Makefile.am  first_window.ui
